--- a/ejercicios-html/ejercicio1.html
+++ b/ejercicios-html/ejercicio1.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/"
-    <title>Document</title>
+    <link rel="stylesheet" href="/ejercicios-html/assets/css/ejercicio.css">
+    <title> Maquetacionn</title>
 </head>
 <body>
-    
+    <header>
+    <h1> Site name</h1>
+        </header>
+
+
+        <a href="#"> Link 1 </a>
+        <a href="#"> Link 2 </a>
+        <a href="#"> Link 3 </a>
+
+        <h2>Main heading here</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia minus aliquid eveniet laboriosam, velit ipsam aspernatur ipsa. Voluptate, sed quia laudantium accusantium ipsa assumenda debitis ex reiciendis, quibusdam vero id.</p>
+
+        <h3> Related info</h3>
+        <p> Ut wisi enim ad minin blbalabla</p>
 </body>
 </html>
